fix(TAP-11099): some bug